drkns 22.02.2017 23:45:29 +0000 - build 4902

1. При обработке команды 'set' не удалялись кавычки из фильтра.

drkns 21.02.2017 18:50:57 +0000 - build 4901

1. Опечатка в 4883.

drkns 20.02.2017 19:16:22 +0000 - build 4900

1. Coverity warnings.

drkns 18.02.2017 19:05:09 +0000 - build 4899

1. Рефакторинг, переименования.

svs 14.02.2017 20:19:16 +0300 - build 4898

1. SQLite 3.17.0

zg 12.02.2017 20:58:11 +0200 - build 4897

1. уточнение 4889.

drkns 11.02.2017 15:51:04 +0000 - build 4896

1. Рефакторинг.

drkns 10.02.2017 22:44:19 +0000 - build 4895

1. Уточнение 4892.

drkns 10.02.2017 22:12:46 +0000 - build 4894

1. Рефакторинг.

yjh 08.02.2017 23:33:29 +0300 - build 4893

1. адаптеция ulink-хелпера к хидерам VS2015sp3 (const)
2. в предыдущем коммите внесена некомпилируемая ошибка (потеря части строки)

drkns 08.02.2017 19:50:19 +0000 - build 4892

1. Рефакторинг.

drkns 08.02.2017 19:44:46 +0000 - build 4891

1. С форума - файлы, запущенные через системные ассоциации пишутся в историю без кавычек, даже если имеют пробелы в именах, из-за чего повторный запуск через Ctrl+E невозможен.

zg 07.02.2017 12:15:01 +0200 - build 4890

1. уточнение 4889.

zg 30.01.2017 17:04:33 +0200 - build 4889

1. при вызове ECTL_SETTITLE из EE_REDRAW не сбрасывается буфер консоли.

drkns 24.01.2017 22:13:49 +0000 - build 4888

1. Уточнение 4887.

2. Рефакторинг.

drkns 23.01.2017 19:30:10 +0000 - build 4887

1. Уточнение 4885.

2. Рефакторинг.

w17 23.01.2017 19:46:07 +0300 - build 4886

1. forum: Не вставить символ как пометку в раскраске

drkns 20.01.2017 18:35:54 +0000 - build 4885

1. 0003385: Ломается пользовательское меню при его редактировании.

drkns 19.01.2017 23:30:22 +0000 - build 4884

1. Новые версии tinyxml2 и fmt.

drkns 19.01.2017 23:23:24 +0000 - build 4883

1. Рефакторинг.

svs 11.01.2017 15:22:11 +0300 - build 4882

1. SQLite 3.16.2

svs 04.01.2017 23:15:57 +0300 - build 4881

1. SQLite 3.16.1

w17 02.01.2017 13:31:46 +0300 - build 4880

1. Уточнение 4874
